--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,78 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .main {
- 
+  margin: 0 auto;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
 }
-ul {
-  margin-bottom: 20px;
+.container{
+  width: 100%;
+  padding: 15px; 
 }
-ul div {
+.heading {
+  background-color: rgb(28, 153, 147);
+  border-radius: 10px;
+}
+.heading h1 {
+  font-family: 'Indie Flower';
+  text-align: center;
+}
+.form{
+  display: flex;
+  align-items: center;
+  background-color: rgb(158, 211, 194);
+  border-radius: 10px;
+  margin-bottom: 20px;
+  padding: 10px;
+  box-shadow: inset 0px 0px 13px 0px grey;
 
+}
+.input{
+  width: 100%;
+  margin-right: 20px;
+  border: none;
+  border-bottom: 1px solid transparent;
+  background-color: transparent;
+  font-family: 'Glory';
+  font-size: 16px;
+
+  
+}
+input:focus{
+  outline: none;
+  border-bottom: 1px solid grey;
+}
+.list-container{
+  padding: 10px 0;
+}
+
+ul {
+  font-family: 'Glory';
+  margin-bottom: 20px;
+  list-style: none;
+}
+.list__item{
+  /* background-color: rgb(184, 231, 217); */
   display: flex;
   justify-content: space-between;
-}
-li{
-  margin:0 20px 10px 0;
-}
-
-button{
-  background-color: cornflowerblue;
-  height: 20px;
-}
-input{
+  align-items: center;
   margin-bottom: 10px;
+  padding: 10px;
+}
+.btn{
+  display: inline-block;
+  border-radius: 50%;
+  border: 1px solid white;
+  color: rgb(141, 231, 204);
+  font-size: 20px;
+  background-color: white;
+  padding: 5px 10px;
+  text-align: center;
 }
